// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsItem render should show actions correctly when the version's action is delete 1`] = `
<div
  className="bcs-VersionsItem"
>
  <VersionsItemButton
    fileId="123"
    isCurrent={false}
    isDisabled={true}
    isSelected={false}
    onClick={[Function]}
  >
    <div
      className="bcs-VersionsItem-badge"
    >
      <VersionsItemBadge
        versionNumber="1"
      />
    </div>
    <div
      className="bcs-VersionsItem-details"
    >
      <div
        className="bcs-VersionsItem-log"
        data-testid="bcs-VersionsItem-log"
        title="Test User"
      >
        <FormattedMessage
          defaultMessage="Deleted by {name}"
          id="be.sidebarVersions.deletedBy"
          values={
            Object {
              "name": "Test User",
              "versionPromoted": undefined,
            }
          }
        />
      </div>
      <div
        className="bcs-VersionsItem-info"
      >
        <time
          className="bcs-VersionsItem-date"
          dateTime={2019-03-01T08:00:00.000Z}
        >
          <ReadableTime
            alwaysShowTime={true}
            relativeThreshold={300000}
            timestamp={1551427200000}
          />
        </time>
        <span
          className="bcs-VersionsItem-size"
        >
          10 KB
        </span>
      </div>
    </div>
  </VersionsItemButton>
  <VersionsItemActions
    fileId="123"
    isCurrent={false}
    isRetained={false}
    onDelete={[Function]}
    onDownload={[Function]}
    onPreview={[Function]}
    onPromote={[Function]}
    onRestore={[Function]}
    showDelete={false}
    showDownload={false}
    showPreview={false}
    showPromote={false}
    showRestore={true}
  />
</div>
`;

exports[`elements/content-sidebar/versions/VersionsItem render should show actions correctly when the version's action is restore 1`] = `
<div
  className="bcs-VersionsItem"
>
  <VersionsItemButton
    fileId="123"
    isCurrent={false}
    isDisabled={false}
    isSelected={false}
    onClick={[Function]}
  >
    <div
      className="bcs-VersionsItem-badge"
    >
      <VersionsItemBadge
        versionNumber="1"
      />
    </div>
    <div
      className="bcs-VersionsItem-details"
    >
      <div
        className="bcs-VersionsItem-log"
        data-testid="bcs-VersionsItem-log"
        title="Test User"
      >
        <FormattedMessage
          defaultMessage="Restored by {name}"
          id="be.sidebarVersions.restoredBy"
          values={
            Object {
              "name": "Test User",
              "versionPromoted": undefined,
            }
          }
        />
      </div>
      <div
        className="bcs-VersionsItem-info"
      >
        <time
          className="bcs-VersionsItem-date"
          dateTime={2019-03-01T08:00:00.000Z}
        >
          <ReadableTime
            alwaysShowTime={true}
            relativeThreshold={300000}
            timestamp={1551427200000}
          />
        </time>
        <span
          className="bcs-VersionsItem-size"
        >
          10 KB
        </span>
      </div>
    </div>
  </VersionsItemButton>
  <VersionsItemActions
    fileId="123"
    isCurrent={false}
    isRetained={false}
    onDelete={[Function]}
    onDownload={[Function]}
    onPreview={[Function]}
    onPromote={[Function]}
    onRestore={[Function]}
    showDelete={true}
    showDownload={true}
    showPreview={true}
    showPromote={true}
    showRestore={false}
  />
</div>
`;

exports[`elements/content-sidebar/versions/VersionsItem render should show actions correctly when the version's action is upload 1`] = `
<div
  className="bcs-VersionsItem"
>
  <VersionsItemButton
    fileId="123"
    isCurrent={false}
    isDisabled={false}
    isSelected={false}
    onClick={[Function]}
  >
    <div
      className="bcs-VersionsItem-badge"
    >
      <VersionsItemBadge
        versionNumber="1"
      />
    </div>
    <div
      className="bcs-VersionsItem-details"
    >
      <div
        className="bcs-VersionsItem-log"
        data-testid="bcs-VersionsItem-log"
        title="Test User"
      >
        <FormattedMessage
          defaultMessage="Uploaded by {name}"
          id="be.sidebarVersions.uploadedBy"
          values={
            Object {
              "name": "Test User",
              "versionPromoted": undefined,
            }
          }
        />
      </div>
      <div
        className="bcs-VersionsItem-info"
      >
        <time
          className="bcs-VersionsItem-date"
          dateTime={2019-03-01T08:00:00.000Z}
        >
          <ReadableTime
            alwaysShowTime={true}
            relativeThreshold={300000}
            timestamp={1551427200000}
          />
        </time>
        <span
          className="bcs-VersionsItem-size"
        >
          10 KB
        </span>
      </div>
    </div>
  </VersionsItemButton>
  <VersionsItemActions
    fileId="123"
    isCurrent={false}
    isRetained={false}
    onDelete={[Function]}
    onDownload={[Function]}
    onPreview={[Function]}
    onPromote={[Function]}
    onRestore={[Function]}
    showDelete={true}
    showDownload={true}
    showPreview={true}
    showPromote={true}
    showRestore={false}
  />
</div>
`;
